--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# summit settings json
+*.json
+
 /public/robots.txt
 /public/sitemap.xml
 /themes/elite
