--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "summit": "sh -c './check-if-theme-exists.sh' && npm run dev",
     "dev": "next dev",
+    "prebuild": "sh -c ./fetch-summit-settings.sh",
     "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "test": "jest",
@@ -13,6 +14,11 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@next/bundle-analyzer": "^14.2.5",
     "@next/font": "^14.2.9",
     "@popperjs/core": "^2.11.8",
@@ -21,6 +27,7 @@
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "axios-cookiejar-support": "^4.0.6",
     "bootstrap": "^5.3.3",
     "debounce": "^2.1.1",
     "firebase": "^9.23.0",
